--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "main": "index.ts",
   "type": "module",
+  "bin": "./dist/index.js",
   "scripts": {
-    "start": "tsx index.ts",
-    "dev": "tsx watch index.ts"
+    "dev": "tsx --watch index.ts",
+    "build": "tsc"
   },
   "keywords": [
     "inferable",
@@ -19,10 +20,10 @@
   "description": "Inferable service demo with SQL and terminal copilot",
   "dependencies": {
     "inferable": "^0.30.67",
-    "sqlite3": "^5.1.7",
-    "tsx": "^4.19.2"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "tsx": "^4.19.2",
     "@types/node": "^20.9.0",
     "@types/sqlite3": "^3.1.11",
     "typescript": "^5.2.2"
