chore: Update module imports and add npm prepare script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": "./dist/index.js",
   "scripts": {
     "dev": "tsx --watch index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "npm version patch && git push && npm publish"
   },
   "keywords": [
     "inferable",
