--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@inferable/demo",
   "version": "0.0.6",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "type": "module",
-  "bin": "./dist/index.js",
+  "bin": {
+    "run": "./dist/index.js"
+  },
   "scripts": {
     "dev": "tsx --watch index.ts",
     "build": "tsc",
-    "prepare": "npm version patch && git push"
+    "prepare": "npm run build && npm version patch && git push"
   },
   "keywords": [
     "inferable",
