--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@inferable/demo",
   "version": "0.0.12",
+  "type": "module",
   "main": "dist/index.js",
   "bin": {
     "run": "./dist/index.js"
