--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "run": "./dist/index.js"
   },
   "scripts": {
-    "dev": "tsx --watch index.ts",
+    "dev": "tsx index.ts",
     "build": "tsc",
     "prepare": "npm run build && npm version patch && git push"
   },
@@ -22,13 +22,15 @@
   "license": "MIT",
   "description": "Inferable service demo with SQL and terminal copilot",
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.12",
+    "better-sqlite3": "^11.7.2",
     "inferable": "^0.30.67",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "tsx": "^4.19.2",
     "@types/node": "^20.9.0",
     "@types/sqlite3": "^3.1.11",
+    "tsx": "^4.19.2",
     "typescript": "^5.2.2"
   },
   "engines": {
