--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@inferable/demo",
   "version": "0.0.14",
-  "type": "module",
   "main": "dist/index.js",
   "bin": {
     "run": "./dist/index.js"
@@ -22,12 +21,11 @@
   "license": "MIT",
   "description": "Inferable service demo with SQL and terminal copilot",
   "dependencies": {
-    "@types/better-sqlite3": "^7.6.12",
     "better-sqlite3": "^11.7.2",
-    "inferable": "^0.30.67",
-    "sqlite3": "^5.1.7"
+    "inferable": "^0.30.67"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20.9.0",
     "@types/sqlite3": "^3.1.11",
     "tsx": "^4.19.2",
